fix: fix loading icon display for NZB uploads in light and dark mode

--- a/webui/style.css
+++ b/webui/style.css
@@ -123,6 +123,11 @@ body {
     -moz-animation:spin 1s linear infinite;
     animation:spin 1s linear infinite;
 }
+
+.spinner.material-icon {
+    color: inherit;
+}
+
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
